--- a/dep-test/pom.xml
+++ b/dep-test/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
@@ -17,8 +16,6 @@
 		<app.runtime>4.2.1</app.runtime>
 		<mule.maven.plugin.version>3.2.7</mule.maven.plugin.version>
 		<munit.version>2.1.5</munit.version>
-
-		<elastic-apm.version>1.8.0</elastic-apm.version>
 	</properties>
 
 	<build>
@@ -64,10 +61,12 @@
 	</build>
 
 	<dependencies>
-
-
-
 		<dependency>
+			<groupId>co.elastic.apm</groupId>
+			<artifactId>mule4-agent</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
+        <dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-http-connector</artifactId>
 			<version>1.5.3</version>
@@ -80,11 +79,6 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 
-		<dependency>
-			<groupId>co.elastic.apm</groupId>
-			<artifactId>mule4-agent</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
-		</dependency>
 		
 
 		<dependency>
@@ -101,7 +95,13 @@
 			<classifier>mule-plugin</classifier>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+            <groupId>org.mule.connectors</groupId>
+            <artifactId>mule-db-connector</artifactId>
+            <version>1.5.4</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    </dependencies>
 
 	<repositories>
 		<repository>
