--- a/mule4-agent/pom.xml
+++ b/mule4-agent/pom.xml
@@ -12,8 +12,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 
-		<elastic-apm.version>1.8.0</elastic-apm.version>
-		<version.byte-buddy>1.9.11</version.byte-buddy>
+		<elastic-apm.version>1.9.0</elastic-apm.version>
 
 		<mule.maven.plugin.version>3.2.7</mule.maven.plugin.version>
 		<build.plugins.plugin.version>2.3.2</build.plugins.plugin.version>
@@ -63,6 +62,13 @@
 			<classifier>mule-plugin</classifier>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-scripting-module</artifactId>
+			<version>1.1.6</version>
+			<classifier>mule-plugin</classifier>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mule.runtime</groupId>
@@ -73,19 +79,19 @@
 		<dependency>
 			<groupId>org.mule.runtime</groupId>
 			<artifactId>mule-core</artifactId>
-			<version>4.2.1</version>
+			<version>4.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.runtime</groupId>
 			<artifactId>mule-module-service</artifactId>
-			<version>4.2.1</version>
+			<version>4.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.runtime</groupId>
 			<artifactId>mule-module-extensions-spring-support</artifactId>
-			<version>4.2.1</version>
+			<version>4.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -93,19 +99,15 @@
 		<dependency>
 			<groupId>co.elastic.apm</groupId>
 			<artifactId>elastic-apm-agent</artifactId>
-			<version>${elastic-apm.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.bytebuddy</groupId>
-			<artifactId>byte-buddy-agent</artifactId>
-			<version>${version.byte-buddy}</version>
+			<version>1.9.1-SNAPSHOT</version>
+			<!-- <version>${elastic-apm.version}</version> -->
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>co.elastic.apm</groupId>
 			<artifactId>apm-agent-attach</artifactId>
-			<version>${elastic-apm.version}</version>
+			<version>1.9.1-SNAPSHOT</version>
+			<!-- <version>${elastic-apm.version}</version> -->
 		</dependency>
 		<dependency>
 			<groupId>co.elastic.apm</groupId>
@@ -118,12 +120,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.25</version>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<version>1.8.0-alpha2</version>
 		</dependency>
 
 
