--- a/dep-test/pom.xml
+++ b/dep-test/pom.xml
@@ -101,6 +101,12 @@
             <version>1.5.4</version>
             <classifier>mule-plugin</classifier>
         </dependency>
+    	<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-scripting-module</artifactId>
+            <version>1.1.6</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
     </dependencies>
 
 	<repositories>
