--- a/mule4-agent/pom.xml
+++ b/mule4-agent/pom.xml
@@ -69,7 +69,36 @@
 			<classifier>mule-plugin</classifier>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mule.connectors</groupId>
+			<artifactId>mule-http-connector</artifactId>
+			<version>1.5.3</version>
+			<classifier>mule-plugin</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.connectors</groupId>
+			<artifactId>mule-sockets-connector</artifactId>
+			<version>1.1.5</version>
+			<classifier>mule-plugin</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.services</groupId>
+			<artifactId>mule-service-scheduler</artifactId>
+			<version>1.2.0</version>
+			<classifier>mule-service</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.services</groupId>
+			<artifactId>mule-service-http</artifactId>
+			<version>1.4.0</version>
+			<classifier>mule-service</classifier>
+			<scope>test</scope>
+		</dependency>
 
+		<!-- Mule Runtime dependencies -->
 		<dependency>
 			<groupId>org.mule.runtime</groupId>
 			<artifactId>mule-api</artifactId>
