--- a/mule4-agent/pom.xml
+++ b/mule4-agent/pom.xml
@@ -170,7 +170,12 @@
 			<version>1.8.0-alpha2</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock-jre8</artifactId>
+			<version>2.25.0</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
