--- a/dep-test/pom.xml
+++ b/dep-test/pom.xml
@@ -13,8 +13,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.2.1</app.runtime>
-		<mule.maven.plugin.version>3.2.7</mule.maven.plugin.version>
+		<app.runtime>4.3.0-20200824</app.runtime>
+		<mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
 		<munit.version>2.1.5</munit.version>
 	</properties>
 
@@ -31,8 +31,13 @@
 							<groupId>co.elastic.apm</groupId>
 							<artifactId>mule4-agent</artifactId>
 						</sharedLibrary>
-					</sharedLibraries>
-				</configuration>
+					<sharedLibrary>
+                            <groupId>org.codehaus.groovy</groupId>
+                            <artifactId>groovy-all</artifactId>
+                        </sharedLibrary>
+                    </sharedLibraries>
+				<classifier>mule-application</classifier>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.mulesoft.munit.tools</groupId>
@@ -64,47 +69,30 @@
 		<dependency>
 			<groupId>co.elastic.apm</groupId>
 			<artifactId>mule4-agent</artifactId>
-			<version>0.0.2</version>
+			<version>0.2.0</version>
 		</dependency>
-        <dependency>
-			<groupId>org.mule.connectors</groupId>
-			<artifactId>mule-http-connector</artifactId>
-			<version>1.5.3</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.connectors</groupId>
-			<artifactId>mule-sockets-connector</artifactId>
-			<version>1.1.5</version>
-			<classifier>mule-plugin</classifier>
-		</dependency>
-
-		
-
-		<dependency>
-			<groupId>com.mulesoft.munit</groupId>
-			<artifactId>munit-runner</artifactId>
-			<version>2.1.5</version>
-			<classifier>mule-plugin</classifier>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.mulesoft.munit</groupId>
-			<artifactId>munit-tools</artifactId>
-			<version>2.1.5</version>
-			<classifier>mule-plugin</classifier>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
+    	<dependency>
             <groupId>org.mule.connectors</groupId>
-            <artifactId>mule-db-connector</artifactId>
-            <version>1.5.4</version>
+            <artifactId>mule-http-connector</artifactId>
+            <version>1.5.22</version>
             <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>org.mule.connectors</groupId>
+            <artifactId>mule-sockets-connector</artifactId>
+            <version>1.2.0</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    	<dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.16</version>
+            <classifier>indy</classifier>
         </dependency>
     	<dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-scripting-module</artifactId>
-            <version>1.1.6</version>
+            <version>1.1.7</version>
             <classifier>mule-plugin</classifier>
         </dependency>
     </dependencies>
